home/static/css/style.css
/* ... */
.video-button:hover {
  background-color: #a96e02;
}

/* 
.video-button {
  border-radius: 50%;
  position: absolute;
  top: 10px;
  right: 10px;
  width: 50px;
  height: 50px;
  background-color: #fdb417;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  cursor: pointer;
  z-index: 100;
} */

.video-modal {
  display: none;
  /* Hidden by default */
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.7);
  /* Dark background */
  justify-content: center;
  align-items: center;
  z-index: 1000;
  /* Ensure it is on top of other content */
}


.modal-content {
  position: relative;
  width: 80%;
  max-width: 800px;
  background-color: white;
  padding: 20px;
  overflow: hidden;
}

/*tablet about us section*/
.image-border-tablet {
  position: absolute;
  bottom: -20px;
  left: 10px;
  width: 85%;
  height: calc(100% - 40px);
  border: 3px solid #fdb417;
  animation: zumpBottom 2s linear infinite;
  z-index: 1;
  border-radius: 8px;
}

.main-image-tablet {
  position: relative;
  z-index: 2;
  width: 100%;
  border-radius: 12px;
}



.modal-content video {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.close-btn:hover {
  color: #333;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 24px;
  background: transparent;
  border: none;
  color: #888;
  cursor: pointer;
}

@keyframes zumpBottom {

  0%,
  100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(10px);
  }
}

/* Default: Hide Mobile View */
.mobile-view {
  display: none;
}

/* Desktop View */
.desktop-view {
  display: block;
}

@media (max-width: 992px) {
  .desktop-view-heritage {
    display: none;
  }

  .mobile-view-heritage {
    display: block;
  }
}

/*--------------------------------------------------------------
#  slideshow home page (index)
--------------------------------------------------------------*/
#heroCarousel {
  height: 100vh;
  /* Full viewport height */
  overflow: hidden;
  /* Prevent resizing issues */
}

.carousel-item {
  height: 100%;
  align-items: center;

}

.carousel-item img {
  height: 100%;
  /* Ensure images fill the height */
  object-fit: cover;
  /* Prevent distortion */
}

.overlay {
  height: 100%;
  /* Ensure overlay matches the carousel height */
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-img img {
  max-height: 70%;
  /* Ensure the hero image doesn't exceed a consistent size */
  object-fit: contain;
}

.carousel-fade .carousel-item {
  transition: opacity 3s ease-out;
  /* Adjust the duration as needed */
  opacity: 0;
  transition: opacity 3s linear;

}

.carousel-inner {
  height: 100%;
}

.carousel-fade .carousel-item.active {
  opacity: 1;
}


.carousel-inner,
.carousel-item {
  margin: 0;
  padding: 0;
  overflow: hidden;
}


.carousel-control-prev,
.carousel-control-next {
  width: 40px;
  /* Reduce width */
  height: 40px;
  /* Reduce height */
  background-color: #00000080;
  /* Optional: Add a background for better visibility */
  border-radius: 50%;
  /* Optional: Make buttons circular */
  top: 50%;
  /* Center vertically */
  transform: translateY(-50%);
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  width: 20px;
  /* Adjust icon size */
  height: 20px;
  /* Adjust icon size */
}

.carousel-control-prev {
  left: 15px;
  /* Adjust horizontal position */
}

.carousel-control-next {
  right: 15px;
  /* Adjust horizontal position */
}

#heroCarousel button {
  margin: 5;
}

#heroCarousel {
  background-position: center;
  /* Centers the image */
  background-repeat: no-repeat;
  /* Prevents tiling */
  height: 100vh;
  position: relative;
  width: 100%;
  height: 100vh;
  background: #000;
  /* border-bottom: 2px solid #fdb417; */
  /* margin: 72px 0 -72px 0; */
  overflow: hidden;
  /* Ensures the video doesn’t overflow out of the section */
  z-index: 1;
}

#heroCarousel h1 {
  font-size: clamp(32px, 5vw, 48px);
  line-height: clamp(40px, 6vw, 56px);
  margin: 0 0 10px 0;
  font-size: 48px;
  font-weight: 700;
  line-height: 56px;
  color: #150700;
  -webkit-text-stroke: 1px #fdb417;
}

#heroCarousel h2 {
  font-size: clamp(18px, 3vw, 24px);
  line-height: clamp(24px, 4vw, 30px);
  color: #150700;
  margin-bottom: 50px;
  font-size: 24px;
  -webkit-text-stroke: 0.3px #fdb417;
}

#heroCarousel .btn-get-started {
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 28px;
  border-radius: 3px;
  transition: 0.5s;
  margin: 10px;
  color: #fff;
  background: #fdb417;
}

#heroCarousel .btn-get-started:hover {
  background: #b18449;
}

#heroCarousel .animated {
  animation: up-down 2s ease-in-out infinite alternate-reverse both;
}

@media (min-width: 1024px) {
  #heroCarousel {
    background-attachment: fixed;
  }
}

@media (max-width: 991px) {
  #heroCarousel {
    height: calc(100vh - 72px);
  }

  /* #heroCarousel .animated {
    -webkit-animation: none;
    animation: none;
  } */

  #heroCarousel .hero-img {
    text-align: center;
  }

  #heroCarousel .hero-img img {
    width: 50%;
  }
}

@media (max-width: 768px) {
  #heroCarousel h1 {
    font-size: 28px;
    line-height: 36px;
  }

  #heroCarousel h2 {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 30px;
  }

  #heroCarousel .hero-img img {
    width: 70%;
  }
}

@media (max-width: 575px) {
  #hero .hero-img img {
    width: 80%;
  }
}

@-webkit-keyframes up-down {
  0% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(-10px);
  }
}

@keyframes up-down {
  0% {
    transform: translateY(10px);
  }

  100% {
    transform: translateY(-10px);
  }
}

/* --------------------------------------------- */
/* 
#hero #heroCarousel {
  position: relative;
  z-index: 0;
  color: #fff;
} */

/* 
.carousel-item {
  position: relative;
}
/* ... */

